[metadata]
name = batchqueue
version = attr: batchqueue.VERSION
author = Stephen Gallagher
author_email = sgallagh@redhat.com
description = A Queue type for handling traffic that arrives in bursts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sgallagher/BatchQueue
license = MIT
keywords = queue, batch
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = batchqueue
